--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -1,3 +1,10 @@
 .card-custom {
-  box-shadow: 0 1px 2px rgba(0,0,0,0.20), 0px 2px 5px rgba(0,0,0,0.15);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2),
+    0px 2px 5px rgba(0, 0, 0, 0.15);
+}
+
+.chart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
