--- a/web-app/src/App.css
+++ b/web-app/src/App.css
@@ -8,3 +8,47 @@
   justify-content: center;
   align-items: center;
 }
+
+.custom-file {
+  position: relative;
+  /* display: inline-block; */
+  width: 100%;
+}
+
+.custom-file-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  /* z-index: 2; */
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.custom-file-label {
+  position: absolute;
+  left: 0;
+  top: 0;
+  /* z-index: 1; */
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.custom-file-input:focus ~ .custom-file-label {
+  border-color: #80bdff;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.custom-file-input:disabled ~ .custom-file-label {
+  background-color: #e9ecef;
+}
